@@ -6,6 +6,10 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.context.annotation.Profile;
 import org.telegram.telegrambots.meta.api.methods.botapimethods.BotApiMethod;
+import org.telegram.telegrambots.meta.api.methods.updates.DeleteWebhook;
+import org.telegram.telegrambots.meta.api.methods.updates.SetWebhook;
+import org.telegram.telegrambots.meta.exceptions.TelegramApiException;
+import org.telegram.telegrambots.meta.generics.TelegramClient;
 import org.telegram.telegrambots.webhook.starter.SpringTelegramWebhookBot;
 
 import java.util.List;
@@ -17,17 +21,33 @@ public class WebhookBotConfig {
     @Bean
     public SpringTelegramWebhookBot webhookBot(
             UpdateHandler updateHandler,
-            @Value("${telegram.bot.webhook-path}") String botPath) {
+            TelegramClient telegramClient,
+            @Value("${telegram.bot.webhook-path}") String botPath,
+            @Value("${telegram.bot.webhook-url}") String webhookUrl) {
 
-        // 1. Логика обработки Update (то, что раньше было в onWebhookUpdateReceived)
         return new SpringTelegramWebhookBot(
                 botPath,
                 update -> {
                     List<BotApiMethod<?>> responses = updateHandler.handleUpdate(update);
-                    return (responses != null && !responses.isEmpty()) ? responses.getFirst() : null;
+                    return responses.isEmpty() ? null : responses.get(0);
                 },
-                () -> { /* логика установки вебхука, можно оставить пустой, если стартер сам делает */ },
-                () -> { /* логика удаления вебхука */ }
+                () -> {  // установка вебхука
+                    try {
+                        SetWebhook setWebhook = SetWebhook.builder()
+                                .url(webhookUrl + botPath)
+                                .build();
+                        telegramClient.execute(setWebhook);
+                    } catch (TelegramApiException e) {
+                        throw new RuntimeException("Failed to set webhook", e);
+                    }
+                },
+                () -> {  // удаление вебхука
+                    try {
+                        telegramClient.execute(new DeleteWebhook());
+                    } catch (TelegramApiException e) {
+                        throw new RuntimeException("Failed to delete webhook", e);
+                    }
+                }
         );
     }
 }
